# pluscodes

./: README.md  pyproject.toml
src/pluscodes/: __init__.py  base.py  code.py  decoder.py  encoder.py  geo.py  transformer.py  types.py  validator.py
src/pluscodes/openlocationcode/: __init__.py  openlocationcode.py
tests/openlocationcode/: test_olc.py
tests/pluscodes/: test_parity.py
tests/pluscodes/data/: data.py  decoding.csv  decoding.json  encoding.csv  encoding.json
